@@ -1,6 +1,7 @@
 Card Maker Version History
 --------------------------
 1.3.0.0
+- Added mirror element option (all element types)
 - Added new reference macros: ![refline] and ![refname]
 - Added reference information to the canvas window title text
 
